Set visiblility of login switch button to hidden during load to avoid flash

--- a/src/AppBundle/Resources/public/sass/common/_global.scss
+++ b/src/AppBundle/Resources/public/sass/common/_global.scss
@@ -146,3 +146,6 @@ a {
 		margin: 0 auto;
 	}
 
+	#swap-login {
+		visibility: hidden;
+	}
