--- a/src/AppBundle/Resources/public/sass/common/_globalNew.scss
+++ b/src/AppBundle/Resources/public/sass/common/_globalNew.scss
@@ -213,6 +213,10 @@ hr {
 		margin: 0 auto;
 	}
 
+	#swap-login {
+		visibility: hidden;
+	}
+
 // Google Maps
 .google-map {
     position: relative;
